Fixed spacing issues with slider on mobile.

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -18,8 +18,13 @@
 	}
 
 #slideshow-container div.slide-arrow-square {
-	width: 50px;
-	height: 100px;
+	width: 20px;
+	height: 40px;
+	}
+
+#slideshow-container div.slide-arrow-square img {
+	width: 20px;
+	height: 40px;
 	}
 
 #slideshow-container div.slide-arrow-square-right {
@@ -34,13 +39,44 @@
 	left: 0px;
 }
 
+
+@media screen and (min-width: 1000px) {
+
+	#slideshow-container div.slide-arrow {
+		display: block;
+		position: absolute;
+		z-index: 9000;
+		top: 0;
+		left: 0;
+		opacity: 0.4;
+		}
+
+	#slideshow-container div.slide-arrow-square {
+		width: 50px;
+		height: 100px;
+		}
+
+	#slideshow-container div.slide-arrow-square img {
+		width: 50px;
+		height: 100px;
+	}
+
+	#slideshow-container div.slide-arrow-square-right {
+		display: none;
+		top: 0px;
+		right: 0px;
+	}
+
+	#slideshow-container div.slide-arrow-square-left {
+		display: none;
+		top: 0px;
+		left: 0px;
+	}
+
+}
+
 #slideshow-dots {
-	display: block;
-	width: 100%;
-	position: absolute;
-	z-index: 9000;
-	text-align: center;
-	margin-top: -40px;
+	display: none;
 }
 
 #slideshow-dots a img {
@@ -48,38 +84,99 @@
 	opacity: 0.4;
 }
 
+@media screen and (min-width: 600px) {
+	#slideshow-dots {
+		display: block;
+		width: 100%;
+		position: absolute;
+		z-index: 9000;
+		text-align: center;
+		margin-top: -40px;
+		}
+}
+
+
+
+
 .infoblock-left-container {
-	position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 50px; opacity: 0.5;
+	position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 30px 10px 10px 60px; opacity: 0.5;
 	}
 .infoblock-left-content {
-	position: absolute; width: 20%; height: 100%; z-index: 6; padding: 50px; opacity: 1; color: #FFF;
+	position: absolute; width: 20%; height: 100%; z-index: 6; padding: 30px 10px 10px 60px; opacity: 1; color: #FFF;
 	line-height: 20px;
+	font-size: 0.8em;
 	}
 
 .infoblock-right-container {
-	position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 50px; opacity: 0.5; right: 0;
+	position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 30px 60px 10px 10px; opacity: 0.5; right: 0;
 	}
 .infoblock-right-content {
-	position: absolute; width: 20%; height: 100%; z-index: 6; padding: 50px; opacity: 1; color: #FFF; right: 0;
+	position: absolute; width: 20%; height: 100%; z-index: 6; padding: 30px 60px 10px 10px; opacity: 1; color: #FFF; right: 0;
 	line-height: 20px;
+	font-size: 0.8em;
 	}
 
 .infoblock-top-container {
-	position: absolute; width: 100%; height: 60px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; top: 0;
+	position: absolute; width: 100%; height: 30px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; top: 0;
 	}
 .infoblock-top-content {
-	position: absolute; width: 100%; height: 60px; z-index: 6;  opacity: 1; color: #FFF; top: 0;
-	line-height: 60px;
+	position: absolute; width: 100%; height: 30px; z-index: 6;  opacity: 1; color: #FFF; top: 0;
+	line-height: 30px;
 	text-align: center;
+	font-size: 0.8em;
 	}
 
 .infoblock-bottom-container {
-	position: absolute; width: 100%; height: 60px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; bottom: 0;
+	position: absolute; width: 100%; height: 30px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; bottom: 0;
 	}
 .infoblock-bottom-content {
-	position: absolute; width: 100%; height: 60px; z-index: 6;  opacity: 1; color: #FFF; bottom: 0;
-	line-height: 60px;
+	position: absolute; width: 100%; height: 30px; z-index: 6;  opacity: 1; color: #FFF; bottom: 0;
+	line-height: 30px;
 	text-align: center;
+	font-size: 0.8em;
 	}
+
+
+@media screen and (min-width: 600px) {
+
+	.infoblock-left-container {
+		position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 50px; opacity: 0.5;
+		}
+	.infoblock-left-content {
+		position: absolute; width: 20%; height: 100%; z-index: 6; padding: 50px; opacity: 1; color: #FFF;
+		line-height: 20px;
+		font-size: 1.0em;
+		}
+
+	.infoblock-right-container {
+		position: absolute; width: 20%; height: 100%; z-index: 5; background-color: #000; color: #FFF; padding: 50px; opacity: 0.5; right: 0;
+		}
+	.infoblock-right-content {
+		position: absolute; width: 20%; height: 100%; z-index: 6; padding: 50px; opacity: 1; color: #FFF; right: 0;
+		line-height: 20px;
+		font-size: 1.0em;
+		}
+
+	.infoblock-top-container {
+		position: absolute; width: 100%; height: 60px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; top: 0;
+		}
+	.infoblock-top-content {
+		position: absolute; width: 100%; height: 60px; z-index: 6;  opacity: 1; color: #FFF; top: 0;
+		line-height: 60px;
+		text-align: center;
+		font-size: 1.0em;
+		}
+
+	.infoblock-bottom-container {
+		position: absolute; width: 100%; height: 60px; z-index: 5; background-color: #000; color: #FFF;  opacity: 0.5; bottom: 0;
+		}
+	.infoblock-bottom-content {
+		position: absolute; width: 100%; height: 60px; z-index: 6;  opacity: 1; color: #FFF; bottom: 0;
+		line-height: 60px;
+		text-align: center;
+		font-size: 1.0em;
+		}
+
+}
 
 
